--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -17,6 +17,6 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - uses: denolib/setup-deno@v1
+      - uses: denolib/setup-deno@master
 
       - run: deno run --allow-all --importmap import_map.json --lock lock.json mod.ts
