--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -19,4 +19,6 @@ jobs:
 
       - uses: denolib/setup-deno@master
 
+      - run: deno --version
+
       - run: deno run --allow-all --importmap import_map.json --lock lock.json mod.ts
