--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -17,7 +17,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - uses: denolib/setup-deno@v1
+      - uses: denolib/setup-deno@master
 
       - run: deno --version
 
