--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
   "[javascript]": { "editor.defaultFormatter": "axetroy.vscode-deno" },
   "[typescript]": { "editor.defaultFormatter": "axetroy.vscode-deno" },
   "deno.enable": true,
-  "deno.import_map": "import_map.json"
+  "deno.import_map": "import_map.json",
+  "editor.defaultFormatter": "esbenp.prettier-vscode"
 }
