--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@typescript-eslint/eslint-plugin": "^2.29.0",
     "@typescript-eslint/parser": "^2.29.0",
     "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.11.0",
     "prettier": "^2.0.5",
     "typescript": "^3.8.3"
   },
